--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
     <div class="container">
         <h1>🚧 Coming Soon 🚧</h1>
         <p>Hello random viewer, this site is AI-generated as a temporary placeholder for a real website.</p>
-        <p>This website is genuinely atrocius and shawarmas are so fucking good bro</p>
+        <p>This website is genuinely atrocious mm shawarmas 🤤🤤</p>
         <div class="contact">
             <p>Want to get in touch? You can't for now.<a href="mailto:fuck.off@example.com">Email me</a></p>
         </div>
     </div>
 </body>
 </html>
+
