--- a/index.html
+++ b/index.html
@@ -162,14 +162,13 @@
       <div class="logo" aria-hidden="true">
         <div class="mark">✨</div>
         <div>
-          <div style="font-size:13px;color:var(--muted);font-weight:600">Your Brand</div>
-          <div style="font-size:11px;color:var(--muted);margin-top:2px">website / 𝒘.𝒆.𝒃</div>
+          <div style="font-size:13px;color:var(--muted);font-weight:600">FYN</div>
+          <div style="font-size:11px;color:var(--muted);margin-top:2px">Personal Website build bro</div>
         </div>
       </div>
 
-      <h1 id="siteTitle" class="title">We’re sprucing things up — coming soon! <span class="pulse-emoji" aria-hidden="true">🚧</span></h1>
-      <p class="lead">Small site. Big vibes. Launching soon with fresh content, shiny UI, and probably too much pink.  
-        Drop your email and I’ll ping you when it’s live ✨</p>
+      <h1 id="siteTitle" class="title">OBAMA HAVE DIHH <span class="pulse-emoji" aria-hidden="true">🌹😔🫩</span></h1>
+      <p class="lead"> This page is dedicated to the one and only  ✨</p>
 
       <div style="margin-top:14px" aria-hidden="true">
         <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:6px">
@@ -209,7 +208,7 @@
           <a href="#" title="Instagram">📸</a>
           <a href="#" title="GitHub">💻</a>
         </div>
-        <div class="small">Made with love — edit this text to add your own links</div>
+        <div class="small">FynFynFyFFFyn</div>
       </div>
     </aside>
   </main>
@@ -231,7 +230,7 @@
       diff -= hours*3600000;
       const mins = Math.floor(diff / 60000);
       el.textContent = `${days}d ${pad(hours)}h ${pad(mins)}m`;
-      if(target - now <= 0){ el.textContent = "Launching very soon 🎉"; clearInterval(iv) }
+      if(target - now <= 0){ el.textContent = "Lau"; clearInterval(iv) }
     }
     tick();
     const iv = setInterval(tick, 60_000);
