--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>DARSHTHEGREATESTOFALLTIME</title>
+<title>G.O.A.T</title>
 <link rel="icon" href="data:,">
 <style>
   :root{
@@ -250,3 +250,4 @@
 </script>
 </body>
 </html>
+
