--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
         </div>
       </div>
 
-      <h1 id="siteTitle" class="title">OBAMA HAVE DIHH <span class="pulse-emoji" aria-hidden="true">🌹😔🫩</span></h1>
-      <p class="lead"> This page is dedicated to the one and only  ✨</p>
+      <h1 id="siteTitle" class="title"> Work in progress<span class="pulse-emoji" aria-hidden="true">🌹😔🫩</span></h1>
+      <p class="lead"> WORK IN PROGRESS</p>
 
       <div style="margin-top:14px" aria-hidden="true">
         <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:6px">
           <div style="background:rgba(255,255,255,0.02);padding:8px 10px;border-radius:10px;font-size:13px">
-            Built with ❤️ HTML + CSS and a LOOOTTT of ChatGPT and myself and coffee and Shawarmas like dude there's just so many little things that fuel our daily go like we've gotta be more appreciative of shawarmas
+            Built with HTML  Shawarma
           </div>
           <div style="background:rgba(255,255,255,0.02);padding:8px 10px;border-radius:10px;font-size:13px">
             Fyn, Fyn, Fyn
@@ -182,7 +182,7 @@
       </div>
 
       <div style="margin-top:18px" class="links" aria-hidden="true">
-        <div>Editing Editing Editing</div>
+        <div>Fyn Fyn FFyn</div>
       </div>
     </section>
 
@@ -196,7 +196,7 @@
       <form class="status" id="subForm" onsubmit="subscribe(event)" aria-label="Subscribe form">
         <div style="font-size:13px;font-weight:700;margin-bottom:6px">FyN</div>
         <div class="subscribe">
-          <input id="email" type="email" placeholder="you@awesome.com" aria-label="Email address" required>
+          <input id="email" type="email" placeholder="fyn@awesome.com" aria-label="Email address" required>
           <button class="btn" type="submit" aria-label="Subscribe">FYn</button>
         </div>
         <div class="small" style="margin-top:8px"> 💌</div>
@@ -244,10 +244,11 @@
     // fallback: open mail client prefilled
     const subj = encodeURIComponent('Subscribe: Launch notify');
     const body = encodeURIComponent('Hey, please add me to the launch list.\n\nEmail: ' + email);
-    // mailto fallback - replace "you@yourdomain.com" with real recipient when you have a backend
+  
     window.location.href = `mailto:you@yourdomain.com?subject=${subj}&body=${body}`;
   }
 </script>
 </body>
 </html>
+
 
