--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="mark">✨</div>
         <div>
           <div style="font-size:13px;color:var(--muted);font-weight:600">FYN</div>
-          <div style="font-size:11px;color:var(--muted);margin-top:2px">Personal Website build bro</div>
+          <div style="font-size:11px;color:var(--muted);margin-top:2px">500 cigarettes</div>
         </div>
       </div>
 
@@ -250,5 +250,6 @@
 </script>
 </body>
 </html>
+
 
 
