--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
-          font-size: 3.5rem;
+          font-size: 3.5rem; ro
         }
       }
 
@@ -157,7 +157,7 @@
 
   <div
   class="class="bg-image" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5),
-  rgba(0, 0, 0, 0.5)), url('aboutbackground.png'); height: 100vh; background-size: cover; background-repeat: no-repeat; background-position: center;  box-shadow: inset 0 0 100px #000;
+  rgba(0, 0, 0, 0.5)), url('Desert 6.jpg'); height: 100vh; background-size: cover; background-repeat: no-repeat; background-position: center;  box-shadow: inset 0 0 100px #000;
   ">
  
 
