--- a/index.html
+++ b/index.html
@@ -121,9 +121,10 @@
   <header class="mb-auto">
     <div>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link fw-bold py-1 px-0" href="about.html">Bio</a>
-        <a class="nav-link fw-bold py-1 px-0" href="contact.html">Contact</a>
+        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="index.html">Homepage</a>
+        <a class="nav-link fw-bold py-1 px-0" href="about.html">About Me</a>
+        <a class="nav-link fw-bold py-1 px-0" href="friedchicken.html">Stuff</a>
+        <a class="nav-link fw-bold py-1 px-0" href="index.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -132,7 +133,7 @@
 
 
   <footer class="mt-auto text-white-50">
-    <p>A WORK IN PROGRESS, THIS SITE WAS BUILT BY MOSES DILTS -> https://tidymoman.github.io/</p>
+    <p>A WORK IN PROGRESS, THIS SITE WAS RIPPED OFF OF MOSES DILTS' SITE THANK YOU MOSES -> https://tidymoman.github.io/</p>
   </footer>
   
 </div>
@@ -159,5 +160,6 @@ window.onload = typeWriter();
 </script>
 
 </html>
+
 
 
